kubernetes/0.1-frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: frontend
  labels:
    environment: sandbox
    name: frontend
