kubernetes/0.2-backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: backend
  labels:
    environment: sandbox
    name: backend
